# openwechat-rs

./: Cargo.toml  README.md
examples/: bot.rs
src/: base_response.rs  bootstrap.rs  consts.rs  errors.rs  lib.rs  storage.rs  sync_check.rs
src/bot/: mod.rs
src/caller/: client.rs  http.rs  mod.rs
src/message/: handle.rs  mod.rs
src/resp/: check_login.rs  login_info.rs  mod.rs  sync_check.rs  sync_message.rs  user.rs  web_init.rs
src/storage/: mod.rs
src/storage/json/: mod.rs  std.rs  tokio.rs
