[package]
name = "openwechat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
lazy_static = "1"
log = "0.4.22"
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
cookie = "0.18.1"
reqwest_cookie_store = "0.8.0"
serde-xml-rs = "0.6.0"
# uuid = { version = "1", features = ["v4"] }
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# async-trait = "0.1.83"
# bon = "3.3.2"
